# hiroya-manjaroi3-playbooks

./: Makefile  README.md  pyproject.toml
inventory/: hosts.yml
inventory/group_vars/: all.yml
playbooks/: applications.yml  init.yml  playbook.yml  system.yml
roles/: .gitignore  requirements.yml
roles/alacritty/tasks/: main.yml
roles/applications/tasks/: main.yml
roles/base/defaults/: main.yml
roles/base/files/: pacman.conf
roles/base/tasks/: main.yml  pacman.yml  system-clock.yml  user.yml
roles/bluetooth/tasks/: main.yml
roles/browsers/tasks/: main.yml
roles/deno/tasks/: main.yml
roles/discord/tasks/: main.yml
roles/docker/tasks/: docker_users.yml  main.yml
roles/dotfiles/tasks/: main.yml
roles/eww/meta/: main.yml
roles/eww/tasks/: main.yml
roles/eww/vars/: main.yml
roles/fcitx/tasks/: main.yml
roles/fish/tasks/: main.yml
roles/fonts/defaults/: main.yml
roles/fonts/tasks/: main.yml
roles/ghq/tasks/: main.yml
roles/gitify/tasks/: main.yml
roles/grub/defaults/: main.yml
roles/grub/tasks/: grub2-themes.yml  main.yml
roles/grub/vars/: main.yml
roles/gtk_themes/tasks/: main.yml  tokyonight.yml
roles/inkscape/tasks/: main.yml
roles/lazygit/tasks/: main.yml
roles/libreoffice/tasks/: main.yml
roles/lightdm/files/: lightdm.conf
roles/lightdm/tasks/: main.yml
roles/locker/defaults/: main.yml
roles/locker/tasks/: main.yml  xidlehook.yml
roles/ly/tasks/: main.yml
roles/neovim/defaults/: main.yml
roles/neovim/meta/: main.yml
roles/neovim/tasks/: main.yml
roles/pacman/files/: pacman.conf
(+22 files in other folders)
