[tool.poetry]
name = "hiroya-manjaroi3-playbooks"
version = "0.1.0"
description = "hiroya-manjaroi3-playbooks"
authors = ["Hiroya-W <hyuyukun@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ansible = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
